lib/kitt/tmpl/apps/onlyoffice-ds/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __APP__
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __APP__
  template:
    metadata:
      labels:
        app: __APP__
    spec:
      containers:
      - name: documentserver
        image: __ONLYOFFICE_DS_IMAGE__
        imagePullPolicy: "__IMAGE_PULL_POLICY__"
        ports:
        - containerPort: 80
