lib/kitt/tmpl/apps/onlyoffice-ds/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP__-svc
  namespace: __NAMESPACE__
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: __APP__
