lib/kitt/tmpl/apps/onlyoffice-ds/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP__-ingress
  namespace: __NAMESPACE__
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: __AUTH_SECRET__
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "__FORCE_SSL_REDIRECT__"
spec:
  ingressClassName: nginx
  rules:
# BEG: HOSTNAME_RULE
  - host: '__HOSTNAME__'
    http:
      paths:
      - path: /7.2.0-204
        pathType: Prefix
        backend:
          service:
            name: __APP__-svc
            port:
              number: 80
      - path: /cache
        pathType: Prefix
        backend:
          service:
            name: __APP__-svc
            port:
              number: 80
      - path: /printfile
        pathType: Prefix
        backend:
          service:
            name: __APP__-svc
            port:
              number: 80
      - path: /web-apps
        pathType: Prefix
        backend:
          service:
            name: __APP__-svc
            port:
              number: 80
# END: HOSTNAME_RULE
  tls:
# BEG: HOSTNAME_TLS
  - hosts:
    - '__HOSTNAME__'
    secretName: '__HOSTNAME__'
# END: HOSTNAME_TLS
